# _s_dso_s_slam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changes.txt  installDependencies.bat  make.bat
src/: Logging.hpp  StopWatch.cpp  StopWatch.hpp  main.cpp  main_dso_pangolin.cpp  rgbd_tum.cpp
src/DBoW2/: FORB.cpp  FORB.h  TemplatedVocabulary.h
src/DSO_System/: CoarseInitializer.cpp  CoarseInitializer.hpp  CoarseTracker.cpp  CoarseTracker.hpp  FullSystem.cpp  FullSystem.hpp  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.hpp  ImmaturePoint.cpp  ImmaturePoint.hpp  PixelSelector.cpp  PixelSelector.hpp  ResidualProjections.hpp  Residuals.cpp  Residuals.hpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.cpp  PixelSelector.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.cpp  ImageDisplay.h  ImageDisplay.hpp  ImageRW.hpp  Input.cpp  Input.hpp  Input_mono_tum.cpp  Input_rgbd_tum.cpp  Output.cpp  Output3D.cpp  Output3D.hpp  Output3DWrapper.h  Output3DWrapper.hpp  SampleOutputWrapper.hpp  ___.hpp
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h  SampleOutputWrapper.hpp
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameDisplay.hpp  PangolinDSOViewer.cpp  PangolinDSOViewer.h  PangolinDSOViewer.hpp
src/ORB_SLAM2_System/: Converter.cpp  Frame.cpp  Frame.hpp  FrameDrawer.cpp  FrameDrawer.hpp  Initializer.cpp  Initializer.hpp  KeyFrame.cpp  KeyFrame.hpp  KeyFrameDatabase.cpp  KeyFrameDatabase.hpp  LocalMapping.cpp  LocalMapping.hpp  LoopClosing.cpp  LoopClosing.hpp  Map.cpp  Map.hpp  MapDrawer.cpp  MapDrawer.hpp  MapPoint.cpp  MapPoint.hpp  ORBVocabulary.hpp  ORBextractor.cpp  ORBextractor.hpp  ORBmatcher.cpp  ORBmatcher.hpp  Optimizer.cpp  Optimizer.hpp  PnPsolver.cpp  PnPsolver.hpp  Sim3Solver.cpp  Sim3Solver.hpp  System.cpp  System.hpp  Tracking.cpp  Tracking.hpp  Viewer.cpp  Viewer.hpp
src/OpenCL/: KERNELS.hpp  OpenCLHelper.hpp
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedSCHessian.hpp  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  AccumulatedTopHessian.hpp  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctional.hpp  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  EnergyFunctionalStructs.hpp  MatrixAccumulators.h  MatrixAccumulators.hpp  RawResidualJacobian.h  RawResidualJacobian.hpp
src/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.hpp  PangolinViewer.cpp  PangolinViewer.hpp
src/sys/: Logging.hpp  time.h  times.cpp  times.h
src/util/: DatasetReader.h  DatasetReader.hpp  FrameShell.h  FrameShell.hpp  ImageAndExposure.h  ImageAndExposure.hpp  IndexThreadReduce.h  IndexThreadReduce.hpp  Input.hpp  MinimalImage.h  MinimalImage.hpp  NumType.h  NumType.hpp  Undistort.cpp  Undistort.h  Undistort.hpp  globalCalib.cpp  globalCalib.h  globalCalib.hpp  globalFuncs.h  globalFuncs.hpp  nanoflann.hpp  settings.cpp  settings.h  settings.hpp
tests/: CatchMain.cpp  HessianCalcOpenCL.cpp  InputTests.cpp  OpenCLTests.cpp  OutputTests.cpp  SampleTest.cpp
tools/: CMakeLists.txt  make.bat
